--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start-api": "cd api && env/Scripts/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"yarn start\" \"yarn start-api\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +33,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  }
 }
